force-app/main/default/objects/Dispatch__c/Dispatch__c.object-meta.xml
<CustomObject>
    <description>Courier despatch and delivery tracking for a printed booklet.</description>
    <label>Dispatch</label>
    <nameField>
        <displayFormat>DSP-{00000}</displayFormat>
        <label>Dispatch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>