force-app/main/default/objects/Dispatch__c/fields/Courier_Partner__c.field-meta.xml
<CustomField>
    <fullName>Courier_Partner__c</fullName>
    <label>Courier Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PSK_Courier_Partner</valueSetName>
    </valueSet>
</CustomField>