force-app/main/default/objects/Dispatch__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <formula>Passport_Application__r.Address_Line1__c &amp; BR() &amp; IF(ISBLANK(Passport_Application__r.Address_Line2__c), "", Passport_Application__r.Address_Line2__c &amp; BR()) &amp; Passport_Application__r.City__c &amp; ", " &amp; TEXT(Passport_Application__r.State__c) &amp; " " &amp; Passport_Application__r.Pincode__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>