force-app/main/default/objects/Dispatch__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport</label>
    <referenceTo>Passport__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>