force-app/main/default/objects/Dispatch__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <label>Passport Application</label>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>