force-app/main/default/objects/Dispatch__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Not Found</fullName>
            </value>
            <value>
                <fullName>Recipient Unavailable</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Incomplete Address</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>