force-app/main/default/objects/Dispatch__c/fields/Transit_Days__c.field-meta.xml
<CustomField>
    <fullName>Transit_Days__c</fullName>
    <formula>IF(OR(ISBLANK(Dispatched_Date__c), ISBLANK(Delivered_Date__c)), 0, Delivered_Date__c - Dispatched_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>