force-app/main/default/objects/Dispatch__c/validationRules/Delivered_Requires_Date_And_Receiver.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivered_Requires_Date_And_Receiver</fullName>
    <active>true</active>
    <description>Proof of delivery is the legal close-out of the application; both the timestamp and the receiver name are required. Transit_Days__c also depends on Delivered Date.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Delivered&quot;), OR( ISBLANK(Delivered_Date__c), ISBLANK(Received_By__c) ) )</errorConditionFormula>
    <errorDisplayField>Delivered_Date__c</errorDisplayField>
    <errorMessage>Enter both the Delivered Date and who the passport was Received By before marking the dispatch Delivered.</errorMessage>
</ValidationRule>