force-app/main/default/objects/Dispatch__c/validationRules/Returned_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Returned_Requires_Reason</fullName>
    <active>true</active>
    <description>A returned booklet must be re-dispatched or re-held; the reason determines which.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Returned&quot;), ISBLANK(TEXT(Return_Reason__c)) )</errorConditionFormula>
    <errorDisplayField>Return_Reason__c</errorDisplayField>
    <errorMessage>Select a Return Reason when marking the dispatch as Returned.</errorMessage>
</ValidationRule>